Trying netlify config method for CORS

--- a/config.toml
+++ b/config.toml
@@ -32,3 +32,9 @@ paginate = 4
 
 [permalinks]
   blog = "/blog/:year/:month/:slug"
+
+[[headers]]
+  # Define which paths this specific [[headers]] block will cover.
+  for = "/*"
+    [headers.values]
+    Access-Control-Allow-Origin = "*"
