Another stab at CORS problem

--- a/config.toml
+++ b/config.toml
@@ -33,6 +33,13 @@ paginate = 4
 [permalinks]
   blog = "/blog/:year/:month/:slug"
 
+# The following redirect is intended for use with most SPAs that handle
+# routing internally.
+[[redirects]]
+  from = "/*"
+  to = "/index.html"
+  status = 200
+
 [[headers]]
   # Define which paths this specific [[headers]] block will cover.
   for = "/*"
